--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="/images/logo.png" alt="">
+        <ul>
+            <li>Home</li>
+            <li>Produtos</li>
+            <li>Contato</li>
+        </ul>
+    </header>
 </body>
 </html>
