transformando os itens da lista em links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <img src="/images/logo.png" alt="">
         <ul>
-            <li>Home</li>
-            <li>Produtos</li>
-            <li>Contato</li>
+            <li><a href="http://">Home</a></li>
+            <li><a href="http://">Produtos</a></li>
+            <li><a href="http://">Contato</a></li>
         </ul>
     </header>
 </body>
