estilização do cabeçalho com css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <header>
         <img src="/images/logo.png" alt="">
-        <ul>
-            <li><a href="http://">Home</a></li>
-            <li><a href="http://">Produtos</a></li>
-            <li><a href="http://">Contato</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="http://">Home</a></li>
+                <li><a href="http://">Produtos</a></li>
+                <li><a href="http://">Contato</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
