reformulação no cabeçalho

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 </head>
 <body>
     <header>
-        <img src="/images/logo.png" alt="">
-        <nav>
-            <ul>
-                <li><a href="http://">Home</a></li>
-                <li><a href="http://">Produtos</a></li>
-                <li><a href="http://">Contato</a></li>
-            </ul>
-        </nav>
+        <div class="caixa">
+            <img src="/images/logo.png" alt="">
+            <nav>
+                <ul>
+                    <li><a href="http://">Home</a></li>
+                    <li><a href="http://">Produtos</a></li>
+                    <li><a href="http://">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
