--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
         </div>
     </header>
     <main>
-        <ul>
+        <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
                 <img src="/images/cabelo.jpg" alt="">
-                <p>Na tesoura ou máquina, como o cliente prefirir</p>
-                <p>R$ 25,00</p>
+                <p class="produto-descricao">Na tesoura ou máquina, como o cliente prefirir</p>
+                <p class="produto-preco">R$ 25,00</p>
             </li>
             <li>
                 <h2>Barba</h2>
                 <img src="/images/barba.jpg" alt="">
-                <p>Corte e desenho profissional de barba</p>
-                <p>R$ 18,00</p>
+                <p class="produto-descricao">Corte e desenho profissional de barba</p>
+                <p class="produto-preco">R$ 18,00</p>
             </li>
             <li>
                 <h2>Cabelo+Barba</h2>
                 <img src="/images/cabelo+barba.jpg" alt="">
-                <p>Pacote completo de cabelo e barba</p>
-                <p>R$ 35,00</p>
+                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+                <p class="produto-preco">R$ 35,00</p>
             </li>
         </ul>
     </main>
