--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <img src="/images/logo-branco.png" alt="">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
 </body>
 </html>
